--- a/style.css
+++ b/style.css
@@ -141,12 +141,13 @@ aside h1{
 aside h1::before{
     content: '';
     position: absolute;
-    width: 100px;
-    height: 2px;
-    background: var(--color-6);
+    width: 50px;
+    height: 3px;
+    background: var(--color-7);
     bottom: -10px;
     left: 50%;
     transform: translateX(-50%);
+    border-radius: 10px;
 }
 aside p{
     font-size: 14px;
@@ -192,11 +193,79 @@ aside button{
 aside button:hover{
     background: linear-gradient(0deg, #d0498d, #ae2c86);
 }
-app{
+.app{
     width: 100%;
     height: auto;
     background: var(--color-5);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+}
+.app .app_img_bx, .app_content_bx{
+    position: relative;
+    width: 35%;
+    height: auto;
+    color: var(--color-1);
+    margin-top: 40px;
+}
+.app .app_img_bx{
+    width: 30%;
+}
+.app .app_img_bx img{
+    width: 90%;
+}
+.app .app_content_bx h1{
+    position: relative;
+    font-size: 30px;
+    line-height: 40px;
+}
+.app .app_content_bx h1::before{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 3px;
+    background: var(--color-7);
+    bottom: -20px;
+    left: 0px;
+    border-radius: 10px;
+}
+.app .app_content_bx p{
+    margin-top: 60px;
+    font-size: 14px;
+    word-break: break-all;
+}
+.app .app_content_bx img{
+    margin-top: 20px;
+}
+.converter{
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding-bottom: 50px;
+}
+.converter::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(/images/crypto\ bg.jpg) no-repeat center center/cover;
+    z-index: -1;
+}
+.converter h1{
+    position: relative;
+    font-size: 30px;
+    padding-top: 50px;
+    text-align: center;
+    color: var(--color-1);
+}
+.converter h1::before{
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 3px;
+    background: var(--color-7);
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
 }
