--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 :root{
     --color-1: #fff;
-    --color-2: rgba(255, 255, 255, 0.6);
+    --color-2: rgba(255, 255, 255, 0.8);
     --color-3: #000;
     --color-4: #00002c;
     --color-5: #000024;
@@ -268,4 +268,210 @@ aside button:hover{
     left: 50%;
     transform: translateX(-50%);
     border-radius: 10px;
+}
+.converter .cards{
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+.converter .cards .card{
+    position: relative;
+    width: 380px;
+    height: 210px;
+}
+.converter .cards .card2{
+    width: 50px;
+    height: 50px;
+    margin: 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background: var(--color-6);
+    color: var(--color-1);
+}
+.converter .cards .card::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00002c80;
+    border-radius: 10px;
+    z-index: -1;
+}
+.converter .cards .card .select{
+    display: flex;
+    align-items: center;
+    color: var(--color-1);
+    margin: 30px 20px 0px 30px;
+}
+.converter .cards .card .select h4{
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--color-6);
+    border-radius: 50%;
+    box-shadow: 0 0 20px rgba(8, 211, 211, .5);
+}
+.converter .cards .card .select .select1{
+    margin-left: 20px;
+}
+.converter .cards .card .select .select1 h6{
+    color: var(--color-2);
+    margin-left: 5px;
+    margin-bottom: 3px;
+}
+.converter .cards .card .select .select1 select{
+    width: 250px;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    color: var(--color-1);
+    font-size: 16px;
+}
+.converter .cards .card .select .select1 select option{
+    background: #00fff280;
+}
+.converter .cards .card .enter_bitcoin{
+    margin: 40px 40px 5px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #d0498d;
+    color: var(--color-1);
+}
+.converter .cards .card .enter_bitcoin input{
+    border: none;
+    outline: none;
+    background: transparent;
+    color: var(--color-1);
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.converter .cards .card p{
+    margin: 0px 40px;
+    font-size: 12px;
+    color: var(--color-1);
+}
+.rocket {
+    position: relative;
+    width: 100%;
+    height: auto;
+    background: url(images/rocket_bg.png)no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.rocket .rocket_content, .rocket_img{
+    width: 32%;
+    height: auto;
+    border: var(--color-1);
+    color: var(--color-1);
+    margin-top: 40px;
+}
+.rocket .rocket_content h1{
+    position: relative;
+    font-size: 25px;
+    line-height: 40px;
+    margin-top: 50px;
+}
+.rocket .rocket_content h1::before{
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 3px;
+    background: var(--color-7);
+    bottom: -10px;
+    left: 0;
+    border-radius: 10px;
+}
+.rocket .rocket_content p{
+    margin-top: 60px;
+    font-size: 14px;
+    word-break: break-all;
+
+}
+.rocket .rocket_content ul{
+    list-style: none;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.rocket .rocket_content ul li{
+    position: relative;
+    width: 200px;
+    font-size: 14px;
+    margin: 3px 0px;
+    padding-left: 20px;
+}
+.rocket .rocket_content ul li::before{
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background: #d0498d;
+    border-radius: 50%;
+    left: 0;
+    top: 8px;
+}
+.rocket .rocket_content button{
+    padding: 12px 25px;
+    background: linear-gradient(0deg, #ae2c86, #d0498d);
+    border-radius: 30px;
+    color: var(--color-1);
+    font-size: 12px;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    margin: 50px auto 30px;
+    cursor: pointer;
+    transition: .3s linear;
+}
+.rocket .rocket_content button:hover{
+    background: linear-gradient(0deg, #d0498d, #ae2c86);
+}
+.rocket .rocket_img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.road_map{
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding-bottom: 60px;
+    background: url(images/rocket_bg.png)no-repeat center center/cover;
+}
+.road_map h1{
+    position: relative;
+    font-size: 30px;
+    padding-top: 50px;
+    text-align: center;
+    color: var(--color-1);
+}
+.road_map h1::before{
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 3px;
+    background: var(--color-7);
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+}
+.road_map p{
+    width: 400px;
+    margin: 50px auto 40px auto;
+    color: var(--color-1);
+    font-size: 14px;
+    text-align: center;
 }
